k8s/blue-green/active-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: buildnest-ecommerce-active
spec:
  selector:
    app: buildnest-ecommerce
    version: blue
  ports:
    - port: 80
      targetPort: 8080
